--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: paypal_sdk
-description: PayPal SDK
+description: PayPal SDK for simplifying integration with PayPal REST APIs
 homepage: https://github.com/chirag729/paypal-sdk
-version: 0.1.0
+version: 0.2.0
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
