--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: paypal_sdk
-description: PayPal SDK for simplifying integration with PayPal REST APIs
+description: PayPal SDK for facilitating integration with PayPal REST APIs
 homepage: https://github.com/Omnimind-Ltd/paypal-sdk
 version: 0.5.0
 
