--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,18 @@
 name: paypal_sdk
 description: PayPal SDK for facilitating integration with PayPal REST APIs
 homepage: https://github.com/Omnimind-Ltd/paypal-sdk
-version: 1.0.8
+version: 1.0.9
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  json_annotation: ^4.8.1
-  http: ^1.0.0
-  logging: ^1.2.0
+  json_annotation: any
+  http: any
+  logging: any
 
 dev_dependencies:
-  lints: ^2.1.1
-  test: ^1.24.3
-  build_runner: ^2.4.5
-  json_serializable: ^6.7.0
+  lints: any
+  test: any
+  build_runner: any
+  json_serializable: any
